# edgecard

./: .gitignore  README.md
python/: pyproject.toml
python/cli/: main.py
python/contextpack/: __init__.py  card.py  crypto.py  history.py  rules.py  sources.py  validator.py  writer.py
python/contextpack/adapters/: __init__.py  file.py  mock.py  modbus.py  mqtt.py  rest.py
python/contextpack/encoders/: __init__.py  json_encoder.py  text_encoder.py  toon_encoder.py  yaml_encoder.py
python/tests/: test_encoders.py  test_rules.py  test_schema.py  test_writer.py
schema/: contextpack-v1.schema.json
